--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,12 +21,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up JDK 21
       uses: actions/setup-java@v3
       with:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
 
+    - name: Build with Maven
+      run: mvn -B verify --file pom.xml
+
+    - run: mkdir staging && cp target/*.jar staging
+
+    - uses: actions/upload-artifact@v4
+      with:
+        name: Package
+        path: staging
